force-app/main/default/objects/Apttus_Approval__Term_Exception_Approval_Condition__c/Apttus_Approval__Term_Exception_Approval_Condition__c.object-meta.xml
<CustomObject>
    <description>Required conditions for a given Term Exception Approval</description>
    <label>Term Exception Approval Condition</label>
    <nameField>
        <displayFormat>TEAC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Term Exception Approval Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>