force-app/main/default/objects/Apttus_Approval__Term_Exception_Approval_Condition__c/fields/Apttus_Approval__Active__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Select this checkbox to include the condition in the conditions that get tested.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>