force-app/main/default/objects/Apttus_Approval__Term_Exception_Approval_Condition__c/fields/Apttus_Approval__Description__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Description__c</fullName>
    <inlineHelpText>Enter an optional description for the condition.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>