force-app/main/default/objects/Apttus_Approval__Term_Exception_Approval_Condition__c/fields/Apttus_Approval__Join__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Join__c</fullName>
    <inlineHelpText>Enter the operator to join conditions with each other.</inlineHelpText>
    <label>Join</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AND</fullName>
                <default>true</default>
                <label>AND</label>
            </value>
            <value>
                <fullName>OR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>