force-app/main/default/objects/Apttus_Approval__Term_Exception_Approval_Condition__c/fields/Apttus_Approval__Number__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Number__c</fullName>
    <inlineHelpText>Enter the number of the condition, startting with 1 and incrementing up to the number of conditions.  Conditions are evaluated in the order specified by this field.  When a condition evaluates to false, remaining conditions are ignored.</inlineHelpText>
    <label>Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>