force-app/main/default/objects/Apttus_Approval__Term_Exception_Approval_Condition__c/fields/Apttus_Approval__Object__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Object__c</fullName>
    <inlineHelpText>Enter the API object name for the object the condition applies to.  For custom objects, the  API name has a  &quot;__c&quot; appended to it.</inlineHelpText>
    <label>Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>