force-app/main/default/objects/Apttus_Approval__Term_Exception_Approval_Condition__c/fields/Apttus_Approval__Object_Qualifier__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Object_Qualifier__c</fullName>
    <inlineHelpText>Qualify the object that this condition applies to.  For example, an object qualifier of &quot;Agreement Owner&quot; means get the value of the &quot;Area__c&quot; field from the &quot;User&quot; specified by the agreement owner in the agreement related to the term exception approval.</inlineHelpText>
    <label>Object Qualifier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Agreement Opportunity Owner</fullName>
            </value>
            <value>
                <fullName>Agreement Owner</fullName>
            </value>
            <value>
                <fullName>Agreement Requestor</fullName>
            </value>
            <value>
                <fullName>Current User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>