force-app/main/default/objects/Apttus_Approval__Term_Exception_Approval_Condition__c/fields/Apttus_Approval__Term_Exception_Approval__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Term_Exception_Approval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field denotes the Term Exception Approval record that this condition applies to.</inlineHelpText>
    <label>Term Exception Approval (Deprecated)</label>
    <referenceTo>Apttus_Approval__Term_Exception_Approval__c</referenceTo>
    <relationshipLabel>Term Exception Approval Conditions (Deprecated)</relationshipLabel>
    <relationshipName>R00N70000002CqgvEAC</relationshipName>
    <type>Lookup</type>
</CustomField>