force-app/main/default/objects/Apttus_Approval__Term_Exception_Approval_Condition__c/fields/Apttus_Approval__TermExceptionApprovalId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__TermExceptionApprovalId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The term exception approval associated with the condition</description>
    <label>Term Exception Approval</label>
    <referenceTo>Apttus_Approval__Term_Exception_Approval__c</referenceTo>
    <relationshipLabel>Term Exception Approval Conditions</relationshipLabel>
    <relationshipName>TermExceptionApprovalConditions</relationshipName>
    <type>Lookup</type>
</CustomField>